@@ -2,6 +2,7 @@ Revision history for Test-Which
 
 0.04
 	"checked" was not being set up
+	Print version found if TEST_VERBOSE is set
 
 0.03	Fri Nov 28 16:30:02 EST 2025
 	Use hashref rather than putting entire hash on the stack
